# Free-Hash-Checker

./: .editorconfig  .gitignore  AppRun.py  Free-Hash-Checker.spec  Hash-Checker.spec  HashCalculator.py  LICENSE  README.md  UpdateManager.py  app.py  build.yml  buildAll.py  clean.bat  extraManager.py  extras.py  hashcalc.py  infoManager.py  linuxBuild.sh  main.py  pyproject.toml  requirements.txt  resources_rc.py  setup.py  tasks.py  test.py  updateManager.py  updater.py  version-file.txt  winBuild.bat  winBuild.cmd
.github/: FUNDING.yml
docs/: CNAME  index.html  index2.html  robots.txt  sitemap.xml  updates.json
docs/contactform/: Readme.txt
docs/css/: sequencejs.css
docs/js/: custom.js  sequencejs-options.sliding-horizontal-parallax.js
freeHashChecker/: AppRun.py  app.py  hashcalc.py  resources_rc.py  updateManager.py
freeHashChecker/ui/: ui_mainwindow.py
hashchecker/: AppRun.py  app.py  infoManager.py  resources_rc.py  updateManager.py
hashchecker/ui/: ui_mainwindow.py
logo/: Hash_Checker_Header.ai  Hash_Checker_Icon.ai
ui/: MainWindow.py  mainwindow.ui  resources.qrc  ui_mainwindow.py
